--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,39 @@
-<p>home works!</p>
+<mat-sidenav-container class="app-sidenav-container">
+    <mat-sidenav mode="side" opened class="app-sidenav">
+        <mat-toolbar color="primary">
+            Menu
+        </mat-toolbar>
+        <mat-list>
+            <mat-list-item>
+                <mat-icon>home</mat-icon>
+                <a routerLink="/home" (click)="navClick('Home')" routerLinkActive="active" class="anchor_class">Home</a>
+            </mat-list-item>
+            <mat-list-item><mat-icon>person</mat-icon><a class="anchor_class" routerLink="profile" (click)="navClick('Profile')" routerLinkActive="active" >Profile</a></mat-list-item>
+            <mat-list-item><mat-icon>photos</mat-icon><a class="anchor_class" routerLink="gallery" (click)="navClick('Gallery')" routerLinkActive="active">Gallery</a></mat-list-item>
+            <mat-list-item><mat-icon>contacts</mat-icon><a class="anchor_class" routerLink="contacts" (click)="navClick('Contacts')" routerLinkActive="active">Contacts</a></mat-list-item>
+        </mat-list>
+    </mat-sidenav>
+
+<div class="app-sidenav-content">
+    <mat-toolbar color="primary">
+    <button mat-icon-button class="sidenav-toggle">
+      <mat-icon>menu</mat-icon>
+    </button>
+    {{currentNav}}
+   </mat-toolbar>
+
+   <div *ngIf="currentNav == 'Home'">
+    <mat-card class="app-card">
+        <mat-card-header>
+          <div mat-card-avatar class="app-header-image"></div>
+          <mat-card-title><b>Edward Yu</b></mat-card-title>
+          <mat-card-subtitle><b>Information Technology Student</b></mat-card-subtitle>
+        </mat-card-header>
+        <img mat-card-image src="assets/img/design.jpg" alt="Photo of EVSU">
+    </mat-card>
+    </div>
+    
+   <router-outlet></router-outlet>
+   
+</div>
+</mat-sidenav-container>
